--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -4,19 +4,49 @@ header .navbar {
     flex-wrap: nowrap;
     padding: 12px;
 }
+header .navbar .container-fluid{
+    justify-content: center;
+}
 header .input-group {
     width: 40%;
 }
-header nav div{
+header .input-group-text .search-btn{
+    background: none;
+    border: none;
+}
+header div .logo-container{
     display: flex;
     flex-direction: row;
+    margin-right: 16px;
 }
-header nav .logo{
-    height: 40px;
-    margin:0 25px;
+header .logo-container .logo{
+    height: 35px;
+    margin:0 15px;
 }
 header nav a{
     text-decoration: none;
     font-size: 24px;
     color: #fff;
+}
+header nav .user-actions{
+    display: flex;
+    gap: 20px;
+    margin: 0 27px;
+}
+header nav .user-actions a{
+    font-size: 19px;
+}
+header nav .user-actions .sign-in{
+padding: 6px;
+transition: 0.5s;
+}
+header nav .user-actions a:hover{
+    color: #fffd6f;
+}
+header nav .user-actions .sign-up{
+padding: 6px;
+border: 2px solid #ffff7a;
+border-radius: 12px;
+transition: 0.5s;
+
 }
