--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -50,3 +50,27 @@ border-radius: 12px;
 transition: 0.5s;
 
 }
+
+.show-message{
+    background-color: #000;
+    padding: 15px;
+}
+
+.message{
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: 1px solid #000;
+    text-align: center;
+}
+
+.message.error{
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+.message.success{
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+}
