created button and updated auth.php

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,3 +3,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+.main-container {
+    background-color: #000;
+    color: #FFF;
+    min-height: 65vh;
+    padding: 40px;
+  }
+
+  
