--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -3,6 +3,7 @@
     background-color: #F5C518;
     border: 2px solid #F5C518;
     width: 100%;
+    transition: 0.4s;
   }
   
   .card-btn:hover {
