--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,10 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+main{
+    
+}
 .main-container {
     background-color: #000;
     color: #FFF;
-    min-height: 65vh;
+    min-height: 75vh;
     padding: 40px;
   }
 
